k8s/ingress-beet-global.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beet-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - app.beet.digital
    secretName: beet-frontend-tls
  ingressClassName: nginx
  rules:
  - host: app.beet.digital  # Replace with your domain or use a local domain for testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beet-frontend
            port:
              number: 80
